# scryai-typescript

./: .env.example  .gitignore  .rubocop.yml  .woodpecker.yml  AGENTS.md  BUILD.md  CAPABILITY-GUIDE.md  CLAUDE.md  CODE-REVIEW.md  CONTRIBUTING_TO_OPENCLAW.md  Gemfile  HANDOFF_PROMPTS.md  PROJECT_IDEAS.md  README.md  REPO_ALIGNMENT.md  Rakefile  SOUL.md  STACK_UPGRADE_CHECKLIST.md  auth.ts  biome.json  drizzle.config.ts  package.json  pyproject.toml  tsconfig.json
app/: actions.ts  globals.css  layout.tsx  page.tsx  status-form.tsx
apps/: README.md
docs/: README.md  tech-stack-refresh-2026-02-17.md  web-template.md
infra/: .env.example  docker-compose.yml
lib/: env.ts
openclaw/: AGENTS.md  BACKUPS.md  BOOTSTRAP.md  BUILD.md  IDENTITY.md  MAX-CAPABILITIES-PLAYBOOK.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md  cron-jobs.json  exec-approvals.json
prompts/: 01-pr-firefighter.md  02-homelab-manager.md  03-git-portfolio.md  04-code-review-app.md  05-support-agent.md  06-lead-to-quote.md  07-clip-engine.md  08-workflow-packs.md  09-trading-dashboard.md  README.md
reference/: CONTRIBUTING_TO_OPENCLAW.md
scripts/: __init__.py  __main__.py  bootstrap.ts  cli.py  cli.ts  common.py  common.ts  crypto.py  crypto.ts  doctor.ts  lighthouse-run.ts  projects-config.ts  projects.config.ts  projects.ts  projects_config.py  remote_policy.py  setup-ssh-backup.ts  setup-ssh-restore.ts  setup-storage.ts  setup-workstation.ts  snapshot.ts
scryai-web/: README.md  biome.json  package-lock.json  package.json
scrybase/: .env.example  .gitignore  Dockerfile  docker-compose.yml  (+4 more)
(+364 files in other folders)
