[project]
name = "scry-home"
version = "0.1.0"
description = "Personal control plane for Scry ops, backups, and workstation bootstrap"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=44.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4,<9",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["openclaw"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
